# rust-practice

./: .gitignore  README.md
async-await/: Cargo.toml
else/async-await/src/: 2.rs  3.rs  4.rs  main.rs
else/cpp/: pointer_ref.cpp
else/devtools/: Cargo.toml
else/devtools/src/: c1.rs  main.rs
else/lifetime/: Cargo.toml
else/lifetime/src/: l1.rs  main.rs
else/list/: Cargo.toml
else/list/src/: l1.rs  main.rs
else/ownership/: Cargo.toml
else/ownership/src/: b2.rs  borrow.rs
else/relearn-enum-struct/: Cargo.toml
else/relearn-enum-struct/src/: e1.rs  e2.rs  e4.rs  main.rs
else/relearn-module/: Cargo.toml
else/relearn-module/examples/: hello-all.rs
else/relearn-module/src/: bye.rs  hello.rs  lib.rs  main.rs  sayonara.rs
else/relearn-trait/: Cargo.toml
else/relearn-trait/src/: main.rs  t1.rs  t2.rs
else/rust-by-example/arrays-and-slices/: Cargo.toml
else/rust-by-example/arrays-and-slices/src/: 3.rs  main.rs
else/struct-drop/: Cargo.toml
else/struct-drop/src/: main.rs
else/thread/src/: 5.rs  6.rs
else/understanding-macro/: Cargo.toml
else/understanding-macro/src/: main.rs
ownership/: Cargo.toml
ownership/src/: b3.rs  b4.rs  b5.rs  borrow.rs  lifetime.rs
rust-by-example/arrays-and-slices/: Cargo.toml
rust-by-example/arrays-and-slices/src/: 1.rs  2.rs
rust-by-example/functions/: Cargo.toml
rust-by-example/functions/src/: main.rs
rust-by-example/ownership/: Cargo.toml
rust-by-example/trait/src/: main.rs
rust-doc-ownership/src/: main.rs
rust-doc-trait/: Cargo.toml
rust-doc-trait/src/: main.rs
rust-jp-trait/: Cargo.toml
rust-jp-trait/src/: main.rs
rust-lang-doc/custom-type-enum/: Cargo.toml
rust-lang-doc/custom-type-enum/src/: e1.rs  e2.rs  e3.rs  e4.rs  e5.rs  e6.rs  main.rs
rust-lang-doc/defining-modules-to-control-scope-and-privacy/: Cargo.toml
rust-lang-doc/defining-modules-to-control-scope-and-privacy/src/: lib.rs
rust-lang-doc/error-handling/: Cargo.toml  hello.txt
rust-lang-doc/error-handling/src/: e1.rs  e2.rs  e3.rs  e4.rs  e5.rs  main.rs
rust-lang-doc/generics/: Cargo.toml
rust-lang-doc/generics/src/: g1.rs  g2.rs  g3.rs  g4.rs  g5.rs  g6.rs  g7.rs  g8.rs  g9.rs  l1.rs  l2.rs  l3.rs  main.rs
rust-lang-doc/managing-growing-projects-with-packages-crates-and-modules/: Cargo.toml
rust-lang-doc/managing-growing-projects-with-packages-crates-and-modules/src/: front_of_house.rs
rust-lang-doc/smart-pointers/: Cargo.toml  s7.rs
rust-lang-doc/smart-pointers/src/: main.rs  s1.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs  s7.rs  s8.rs
rust-lang-doc/testing/adder/: Cargo.toml
rust-lang-doc/testing/adder/src/: lib.rs
rust-lang-doc/testing/adder/tests/: integration_test.rs
rust-lang-doc/understanding-ownership/: Cargo.toml
rust-lang-doc/understanding-ownership/src/: main.rs  mutability.rs  slice1.rs  slice2.rs
rust-lang-doc/using-structs-to-structure-related-data/: Cargo.toml
rust-lang-doc/using_structs_to_structure_related_data/: Cargo.toml
rust-lang-doc/using_structs_to_structure_related_data/src/: main.rs
thread/: Cargo.toml
thread/src/: 1.rs  2.rs  3.rs  4.rs
understanding-ownership/: Cargo.toml
