[package]
name = "async-await"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
futures = "0.3.13"

[[bin]]
name = "2"
path = "src/2.rs"
[[bin]]
name = "3"
path = "src/3.rs"
[[bin]]
name = "4"
path = "src/4.rs"
