[package]
name = "relearn-trait"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "t1"
path = "src/t1.rs"

[[bin]]
name = "t2"
path = "src/t2.rs"
