[package]
name = "generics"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "g1"
path = "src/g1.rs"

[[bin]]
name = "g2"
path = "src/g2.rs"

[[bin]]
name = "g3"
path = "src/g3.rs"

[[bin]]
name = "l1"
path = "src/l1.rs"

[[bin]]
name = "l2"
path = "src/l2.rs"

[[bin]]
name = "l3"
path = "src/l3.rs"
