[package]
name = "smart-pointers"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "s1"
path = "src/s1.rs"

[[bin]]
name = "s2"
path = "src/s2.rs"

[[bin]]
name = "s3"
path = "src/s3.rs"

[[bin]]
name = "s4"
path = "src/s4.rs"
