[package]
name = "smart-pointers"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "s1"
path = "src/s1.rs"

[[bin]]
name = "s2"
path = "src/s2.rs"

[[bin]]
name = "s3"
path = "src/s3.rs"

[[bin]]
name = "s4"
path = "src/s4.rs"

[[bin]]
name = "s5"
path = "src/s5.rs"

[[bin]]
name = "s6"
path = "src/s6.rs"

[[bin]]
name = "s7"
path = "src/s7.rs"

[[bin]]
name = "s8"
path = "src/s8.rs"
