[package]
name = "understanding-ownership"
version = "0.1.0"
authors = ["glutton <koki827tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "slice1"
path = "src/slice1.rs"

[[bin]]
name = "slice2"
path = "src/slice2.rs"

[[bin]]
name = "muta"
path = "src/mutability.rs"
